--- a/.gitignore
+++ b/.gitignore
@@ -13,11 +13,27 @@
 # Package Files #
 *.jar
 *.war
-*.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
 
+# Eclipse PDE target files (which are almost always generated)
+*/*.target
+
+**/META-INF/MANIFEST.MF
+!**/src/*/resources/META-INF/
+
+target/
+.classpath
+.factorypath
+.project
+.settings/
+.flattened-pom.xml
+.apt_generated_tests/
+bin/
+generated/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+maply-test/sample_data/data/output.pdf
