--- a/maply-masterparent/pom.xml
+++ b/maply-masterparent/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
@@ -15,20 +14,20 @@
   <name>DiamondQ Maply: Master Parent</name>
   <description>DiamondQ Maply</description>
   <properties>
-    <scm.project>maply-masterparent</scm.project>
-    <nexus.url>https://nexus.diamondq.com</nexus.url>
-    <nexus.serverId>1-dq-snapshot</nexus.serverId>
-    <nexus.auto.release>false</nexus.auto.release>
-    <nexus.skip.staging>true</nexus.skip.staging>
+    <scm.project>maply</scm.project>
+    <nexus.url>https://oss.sonatype.org</nexus.url>
+    <nexus.serverId>ossrh</nexus.serverId>
+    <nexus.auto.release>true</nexus.auto.release>
+    <nexus.skip.staging>false</nexus.skip.staging>
   </properties>
   <distributionManagement>
     <snapshotRepository>
-      <id>1-dq-snapshot</id>
-      <url>https://nexus.diamondq.com/repository/maven-snapshots/</url>
+      <id>ossrh-snap</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <repository>
-      <id>2-dq-release</id>
-      <url>https://nexus.diamondq.com/repository/maven-releases/</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
   <profiles>
