--- a/maply-core/pom.xml
+++ b/maply-core/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.diamondq.maply</groupId>
     <artifactId>maply-parent</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>${revision}${sha1}${changelist}</version>
     <relativePath>../maply-parent</relativePath>
   </parent>
   <artifactId>maply-core</artifactId>
@@ -33,7 +33,6 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-math3</artifactId>
-      <version>3.6.1</version>
     </dependency>
   </dependencies>
 </project>
