--- a/maply-parent/pom.xml
+++ b/maply-parent/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.diamondq.maply</groupId>
     <artifactId>maply-masterparent</artifactId>
-    <version>0.2.0-SNAPSHOT</version>
+    <version>${revision}${sha1}${changelist}</version>
     <relativePath>../maply-masterparent</relativePath>
   </parent>
   <artifactId>maply-parent</artifactId>
@@ -17,7 +17,7 @@
       <dependency>
         <groupId>com.diamondq.common</groupId>
         <artifactId>common-bom</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.3.246-63904dd</version>
         <scope>import</scope>
         <type>pom</type>
       </dependency>
@@ -46,6 +46,11 @@
         <groupId>commons-jxpath</groupId>
         <artifactId>commons-jxpath</artifactId>
         <version>1.3</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-math3</artifactId>
+        <version>3.6.1</version>
       </dependency>
       <dependency>
         <groupId>org.apache.pdfbox</groupId>
